// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hiscores getHiscores should default type to HiscoreTypes.normal 1`] = `
{
  "method": "GET",
  "params": {
    "player": "Bald",
  },
  "url": "http://services.runescape.com/m=hiscore_oldschool/index_lite.json",
}
`;

exports[`Hiscores getHiscores should hit the specified hiscore type endpoint 1`] = `
{
  "method": "GET",
  "params": {
    "player": "Bald",
  },
  "url": "http://services.runescape.com/m=hiscore_oldschool_seasonal/index_lite.json",
}
`;

exports[`Hiscores getHiscores should make a GET request 1`] = `
{
  "method": "GET",
  "params": {
    "player": "Bald",
  },
  "url": "http://services.runescape.com/m=hiscore_oldschool/index_lite.json",
}
`;

exports[`Hiscores getHiscores should make a request with the passed in player name 1`] = `
{
  "method": "GET",
  "params": {
    "player": "Bald",
  },
  "url": "http://services.runescape.com/m=hiscore_oldschool/index_lite.json",
}
`;

exports[`Hiscores getHiscores should properly parse rank and kills for each boss 1`] = `
{
  "abyssalSire": {
    "kills": 378,
    "rank": 71704,
  },
  "alchemicalHydra": {
    "kills": -1,
    "rank": -1,
  },
  "araxxor": {
    "kills": -1,
    "rank": -1,
  },
  "artio": {
    "kills": -1,
    "rank": -1,
  },
  "barrowsChests": {
    "kills": 415,
    "rank": 126838,
  },
  "bryophyta": {
    "kills": -1,
    "rank": -1,
  },
  "callisto": {
    "kills": -1,
    "rank": -1,
  },
  "calvarion": {
    "kills": -1,
    "rank": -1,
  },
  "cerberus": {
    "kills": 523,
    "rank": 119189,
  },
  "chambersOfXeric": {
    "kills": 6,
    "rank": 296526,
  },
  "chambersOfXericChallengeMode": {
    "kills": -1,
    "rank": -1,
  },
  "chaosElemental": {
    "kills": 6,
    "rank": 237309,
  },
  "chaosFanatic": {
    "kills": 7,
    "rank": 291488,
  },
  "commanderZilyana": {
    "kills": 57,
    "rank": 165879,
  },
  "corporealBeast": {
    "kills": 93,
    "rank": 78550,
  },
  "corruptedGauntlet": {
    "kills": -1,
    "rank": -1,
  },
  "crazyArchaeologist": {
    "kills": -1,
    "rank": -1,
  },
  "dagannothPrime": {
    "kills": 166,
    "rank": 153558,
  },
  "dagannothRex": {
    "kills": 172,
    "rank": 227184,
  },
  "dagannothSupreme": {
    "kills": 166,
    "rank": 152686,
  },
  "derangedArchaeologist": {
    "kills": -1,
    "rank": -1,
  },
  "dukeSucellus": {
    "kills": 300,
    "rank": 35845,
  },
  "gauntlet": {
    "kills": -1,
    "rank": -1,
  },
  "generalGraardor": {
    "kills": 14,
    "rank": 408552,
  },
  "giantMole": {
    "kills": 674,
    "rank": 56197,
  },
  "grotesqueGuardians": {
    "kills": -1,
    "rank": -1,
  },
  "hespori": {
    "kills": 20,
    "rank": 398653,
  },
  "kalphiteQueen": {
    "kills": 34,
    "rank": 199859,
  },
  "kingBlackDragon": {
    "kills": 180,
    "rank": 187563,
  },
  "kraken": {
    "kills": 33,
    "rank": 464747,
  },
  "krilTsutsaroth": {
    "kills": 62,
    "rank": 148280,
  },
  "leviathan": {
    "kills": -1,
    "rank": -1,
  },
  "lunarChests": {
    "kills": -1,
    "rank": -1,
  },
  "mimic": {
    "kills": 3,
    "rank": 73888,
  },
  "nex": {
    "kills": 220,
    "rank": 67521,
  },
  "nightmare": {
    "kills": 11,
    "rank": 85021,
  },
  "obor": {
    "kills": -1,
    "rank": -1,
  },
  "phantomMuspah": {
    "kills": -1,
    "rank": -1,
  },
  "phosanisNightmare": {
    "kills": -1,
    "rank": -1,
  },
  "sarachnis": {
    "kills": -1,
    "rank": -1,
  },
  "scorpia": {
    "kills": -1,
    "rank": -1,
  },
  "scurrius": {
    "kills": -1,
    "rank": -1,
  },
  "skotizo": {
    "kills": 12,
    "rank": 365331,
  },
  "solHeredit": {
    "kills": -1,
    "rank": -1,
  },
  "spindel": {
    "kills": -1,
    "rank": -1,
  },
  "tempoross": {
    "kills": -1,
    "rank": -1,
  },
  "theatreOfBlood": {
    "kills": -1,
    "rank": -1,
  },
  "theatreOfBloodHardMode": {
    "kills": -1,
    "rank": -1,
  },
  "thermonuclearSmokeDevil": {
    "kills": 62,
    "rank": 227343,
  },
  "tombsOfAmascut": {
    "kills": 39,
    "rank": 118175,
  },
  "tombsOfAmascutExpertMode": {
    "kills": 98,
    "rank": 49095,
  },
  "tzKalZuk": {
    "kills": 1,
    "rank": 68365,
  },
  "tzTokJad": {
    "kills": 8,
    "rank": 141039,
  },
  "vardorvis": {
    "kills": 5,
    "rank": 94247,
  },
  "venenatis": {
    "kills": 191,
    "rank": 53200,
  },
  "vetion": {
    "kills": -1,
    "rank": -1,
  },
  "vorkath": {
    "kills": 134,
    "rank": 343702,
  },
  "whisperer": {
    "kills": -1,
    "rank": -1,
  },
  "wintertodt": {
    "kills": 404,
    "rank": 294152,
  },
  "zalcano": {
    "kills": -1,
    "rank": -1,
  },
  "zulrah": {
    "kills": 693,
    "rank": 151804,
  },
}
`;

exports[`Hiscores getHiscores should properly parse rank and score for each minigame 1`] = `
{
  "bountyHunter": {
    "rank": -1,
    "score": -1,
  },
  "bountyHunterLegacy": {
    "rank": 164245,
    "score": 6,
  },
  "bountyHunterRogues": {
    "rank": -1,
    "score": -1,
  },
  "bountyHunterRoguesLegacy": {
    "rank": 109891,
    "score": 6,
  },
  "clueScrollsAll": {
    "rank": 53147,
    "score": 790,
  },
  "clueScrollsBeginner": {
    "rank": 162076,
    "score": 27,
  },
  "clueScrollsEasy": {
    "rank": 97872,
    "score": 65,
  },
  "clueScrollsElite": {
    "rank": 22663,
    "score": 118,
  },
  "clueScrollsHard": {
    "rank": 15762,
    "score": 454,
  },
  "clueScrollsMaster": {
    "rank": 34918,
    "score": 69,
  },
  "clueScrollsMedium": {
    "rank": 233579,
    "score": 57,
  },
  "colosseumGlory": {
    "rank": -1,
    "score": -1,
  },
  "deadmanPoints": {
    "rank": -1,
    "score": -1,
  },
  "leaguePoints": {
    "rank": -1,
    "score": -1,
  },
  "lms": {
    "rank": 107582,
    "score": 737,
  },
  "pvpArena": {
    "rank": -1,
    "score": -1,
  },
  "riftsClosed": {
    "rank": 160348,
    "score": 174,
  },
  "soulWarsZeal": {
    "rank": -1,
    "score": -1,
  },
}
`;

exports[`Hiscores getHiscores should properly parse rank, level, and xp for each skill 1`] = `
{
  "agility": {
    "level": 86,
    "rank": 198963,
    "xp": 3742675,
  },
  "attack": {
    "level": 99,
    "rank": 78278,
    "xp": 21037534,
  },
  "construction": {
    "level": 99,
    "rank": 97574,
    "xp": 13041814,
  },
  "cooking": {
    "level": 99,
    "rank": 76187,
    "xp": 14860431,
  },
  "crafting": {
    "level": 99,
    "rank": 74422,
    "xp": 13604168,
  },
  "defence": {
    "level": 99,
    "rank": 52584,
    "xp": 19951069,
  },
  "farming": {
    "level": 99,
    "rank": 200821,
    "xp": 13309264,
  },
  "firemaking": {
    "level": 99,
    "rank": 66299,
    "xp": 14106174,
  },
  "fishing": {
    "level": 99,
    "rank": 122926,
    "xp": 13041101,
  },
  "fletching": {
    "level": 99,
    "rank": 59505,
    "xp": 13487041,
  },
  "herblore": {
    "level": 99,
    "rank": 39388,
    "xp": 13350859,
  },
  "hitpoints": {
    "level": 99,
    "rank": 113651,
    "xp": 35167187,
  },
  "hunter": {
    "level": 84,
    "rank": 280595,
    "xp": 3219765,
  },
  "magic": {
    "level": 99,
    "rank": 67930,
    "xp": 23828381,
  },
  "mining": {
    "level": 99,
    "rank": 54903,
    "xp": 13789044,
  },
  "overall": {
    "level": 2223,
    "rank": 79830,
    "xp": 346656360,
  },
  "prayer": {
    "level": 99,
    "rank": 26676,
    "xp": 13537456,
  },
  "ranged": {
    "level": 99,
    "rank": 152210,
    "xp": 27455574,
  },
  "runecrafting": {
    "level": 90,
    "rank": 129035,
    "xp": 5716496,
  },
  "slayer": {
    "level": 99,
    "rank": 97339,
    "xp": 14465551,
  },
  "smithing": {
    "level": 89,
    "rank": 192914,
    "xp": 5196110,
  },
  "strength": {
    "level": 99,
    "rank": 71141,
    "xp": 30852240,
  },
  "thieving": {
    "level": 92,
    "rank": 201865,
    "xp": 6660699,
  },
  "woodcutting": {
    "level": 99,
    "rank": 109581,
    "xp": 13235727,
  },
}
`;

exports[`Hiscores getHiscores should return skills, minigames, and bosses from a json response 1`] = `
{
  "bosses": {
    "abyssalSire": {
      "kills": 378,
      "rank": 71704,
    },
    "alchemicalHydra": {
      "kills": -1,
      "rank": -1,
    },
    "araxxor": {
      "kills": -1,
      "rank": -1,
    },
    "artio": {
      "kills": -1,
      "rank": -1,
    },
    "barrowsChests": {
      "kills": 415,
      "rank": 126838,
    },
    "bryophyta": {
      "kills": -1,
      "rank": -1,
    },
    "callisto": {
      "kills": -1,
      "rank": -1,
    },
    "calvarion": {
      "kills": -1,
      "rank": -1,
    },
    "cerberus": {
      "kills": 523,
      "rank": 119189,
    },
    "chambersOfXeric": {
      "kills": 6,
      "rank": 296526,
    },
    "chambersOfXericChallengeMode": {
      "kills": -1,
      "rank": -1,
    },
    "chaosElemental": {
      "kills": 6,
      "rank": 237309,
    },
    "chaosFanatic": {
      "kills": 7,
      "rank": 291488,
    },
    "commanderZilyana": {
      "kills": 57,
      "rank": 165879,
    },
    "corporealBeast": {
      "kills": 93,
      "rank": 78550,
    },
    "corruptedGauntlet": {
      "kills": -1,
      "rank": -1,
    },
    "crazyArchaeologist": {
      "kills": -1,
      "rank": -1,
    },
    "dagannothPrime": {
      "kills": 166,
      "rank": 153558,
    },
    "dagannothRex": {
      "kills": 172,
      "rank": 227184,
    },
    "dagannothSupreme": {
      "kills": 166,
      "rank": 152686,
    },
    "derangedArchaeologist": {
      "kills": -1,
      "rank": -1,
    },
    "dukeSucellus": {
      "kills": 300,
      "rank": 35845,
    },
    "gauntlet": {
      "kills": -1,
      "rank": -1,
    },
    "generalGraardor": {
      "kills": 14,
      "rank": 408552,
    },
    "giantMole": {
      "kills": 674,
      "rank": 56197,
    },
    "grotesqueGuardians": {
      "kills": -1,
      "rank": -1,
    },
    "hespori": {
      "kills": 20,
      "rank": 398653,
    },
    "kalphiteQueen": {
      "kills": 34,
      "rank": 199859,
    },
    "kingBlackDragon": {
      "kills": 180,
      "rank": 187563,
    },
    "kraken": {
      "kills": 33,
      "rank": 464747,
    },
    "krilTsutsaroth": {
      "kills": 62,
      "rank": 148280,
    },
    "leviathan": {
      "kills": -1,
      "rank": -1,
    },
    "lunarChests": {
      "kills": -1,
      "rank": -1,
    },
    "mimic": {
      "kills": 3,
      "rank": 73888,
    },
    "nex": {
      "kills": 220,
      "rank": 67521,
    },
    "nightmare": {
      "kills": 11,
      "rank": 85021,
    },
    "obor": {
      "kills": -1,
      "rank": -1,
    },
    "phantomMuspah": {
      "kills": -1,
      "rank": -1,
    },
    "phosanisNightmare": {
      "kills": -1,
      "rank": -1,
    },
    "sarachnis": {
      "kills": -1,
      "rank": -1,
    },
    "scorpia": {
      "kills": -1,
      "rank": -1,
    },
    "scurrius": {
      "kills": -1,
      "rank": -1,
    },
    "skotizo": {
      "kills": 12,
      "rank": 365331,
    },
    "solHeredit": {
      "kills": -1,
      "rank": -1,
    },
    "spindel": {
      "kills": -1,
      "rank": -1,
    },
    "tempoross": {
      "kills": -1,
      "rank": -1,
    },
    "theatreOfBlood": {
      "kills": -1,
      "rank": -1,
    },
    "theatreOfBloodHardMode": {
      "kills": -1,
      "rank": -1,
    },
    "thermonuclearSmokeDevil": {
      "kills": 62,
      "rank": 227343,
    },
    "tombsOfAmascut": {
      "kills": 39,
      "rank": 118175,
    },
    "tombsOfAmascutExpertMode": {
      "kills": 98,
      "rank": 49095,
    },
    "tzKalZuk": {
      "kills": 1,
      "rank": 68365,
    },
    "tzTokJad": {
      "kills": 8,
      "rank": 141039,
    },
    "vardorvis": {
      "kills": 5,
      "rank": 94247,
    },
    "venenatis": {
      "kills": 191,
      "rank": 53200,
    },
    "vetion": {
      "kills": -1,
      "rank": -1,
    },
    "vorkath": {
      "kills": 134,
      "rank": 343702,
    },
    "whisperer": {
      "kills": -1,
      "rank": -1,
    },
    "wintertodt": {
      "kills": 404,
      "rank": 294152,
    },
    "zalcano": {
      "kills": -1,
      "rank": -1,
    },
    "zulrah": {
      "kills": 693,
      "rank": 151804,
    },
  },
  "minigames": {
    "bountyHunter": {
      "rank": -1,
      "score": -1,
    },
    "bountyHunterLegacy": {
      "rank": 164245,
      "score": 6,
    },
    "bountyHunterRogues": {
      "rank": -1,
      "score": -1,
    },
    "bountyHunterRoguesLegacy": {
      "rank": 109891,
      "score": 6,
    },
    "clueScrollsAll": {
      "rank": 53147,
      "score": 790,
    },
    "clueScrollsBeginner": {
      "rank": 162076,
      "score": 27,
    },
    "clueScrollsEasy": {
      "rank": 97872,
      "score": 65,
    },
    "clueScrollsElite": {
      "rank": 22663,
      "score": 118,
    },
    "clueScrollsHard": {
      "rank": 15762,
      "score": 454,
    },
    "clueScrollsMaster": {
      "rank": 34918,
      "score": 69,
    },
    "clueScrollsMedium": {
      "rank": 233579,
      "score": 57,
    },
    "colosseumGlory": {
      "rank": -1,
      "score": -1,
    },
    "deadmanPoints": {
      "rank": -1,
      "score": -1,
    },
    "leaguePoints": {
      "rank": -1,
      "score": -1,
    },
    "lms": {
      "rank": 107582,
      "score": 737,
    },
    "pvpArena": {
      "rank": -1,
      "score": -1,
    },
    "riftsClosed": {
      "rank": 160348,
      "score": 174,
    },
    "soulWarsZeal": {
      "rank": -1,
      "score": -1,
    },
  },
  "skills": {
    "agility": {
      "level": 86,
      "rank": 198963,
      "xp": 3742675,
    },
    "attack": {
      "level": 99,
      "rank": 78278,
      "xp": 21037534,
    },
    "construction": {
      "level": 99,
      "rank": 97574,
      "xp": 13041814,
    },
    "cooking": {
      "level": 99,
      "rank": 76187,
      "xp": 14860431,
    },
    "crafting": {
      "level": 99,
      "rank": 74422,
      "xp": 13604168,
    },
    "defence": {
      "level": 99,
      "rank": 52584,
      "xp": 19951069,
    },
    "farming": {
      "level": 99,
      "rank": 200821,
      "xp": 13309264,
    },
    "firemaking": {
      "level": 99,
      "rank": 66299,
      "xp": 14106174,
    },
    "fishing": {
      "level": 99,
      "rank": 122926,
      "xp": 13041101,
    },
    "fletching": {
      "level": 99,
      "rank": 59505,
      "xp": 13487041,
    },
    "herblore": {
      "level": 99,
      "rank": 39388,
      "xp": 13350859,
    },
    "hitpoints": {
      "level": 99,
      "rank": 113651,
      "xp": 35167187,
    },
    "hunter": {
      "level": 84,
      "rank": 280595,
      "xp": 3219765,
    },
    "magic": {
      "level": 99,
      "rank": 67930,
      "xp": 23828381,
    },
    "mining": {
      "level": 99,
      "rank": 54903,
      "xp": 13789044,
    },
    "overall": {
      "level": 2223,
      "rank": 79830,
      "xp": 346656360,
    },
    "prayer": {
      "level": 99,
      "rank": 26676,
      "xp": 13537456,
    },
    "ranged": {
      "level": 99,
      "rank": 152210,
      "xp": 27455574,
    },
    "runecrafting": {
      "level": 90,
      "rank": 129035,
      "xp": 5716496,
    },
    "slayer": {
      "level": 99,
      "rank": 97339,
      "xp": 14465551,
    },
    "smithing": {
      "level": 89,
      "rank": 192914,
      "xp": 5196110,
    },
    "strength": {
      "level": 99,
      "rank": 71141,
      "xp": 30852240,
    },
    "thieving": {
      "level": 92,
      "rank": 201865,
      "xp": 6660699,
    },
    "woodcutting": {
      "level": 99,
      "rank": 109581,
      "xp": 13235727,
    },
  },
}
`;
